--- a/src/app/fcomponents/pages/homepage/homepage.component.html
+++ b/src/app/fcomponents/pages/homepage/homepage.component.html
@@ -65,8 +65,8 @@
       <div class="row justify-content-md-center my-5"> <div class="col-12 text-center"><button type="button" class="btn btn-outline-gold">View our products</button></div>
       </div>
   </div>
-<!-- icons -->
-  <div style="background-color: #f2f2f2;margin-left: -15px; margin-right: -15px;" >
+<!-- Hire Products -->
+  <!-- <div style="background-color: #f2f2f2;margin-left: -15px; margin-right: -15px;" >
     <div class="container my-5 py-2">
       <div class="row my-5">
         <div class="col-sm-12 col-md-4">
@@ -86,9 +86,18 @@
         </div>
       </div> 
     </div>
+  </div> -->
+  <div class="container p-0 my-5 hireCollection">
+    <div class="text-center mb-5 m1">Hire Collection</div>
+    <div class="row">
+      <div class="col-3"><img src="../../../../assets/images/productImg1.jpeg"><div>Oblong Trestle Tables</div><div>$120</div></div>
+      <div class="col-3"><img src="../../../../assets/images/productImg2.jpeg"><div>Round Tables</div><div>$120</div></div>
+      <div class="col-3"><img src="../../../../assets/images/productImg3.png"><div>Round Tables</div><div>$120</div></div>
+      <div class="col-3"><img src="../../../../assets/images/465b91cc5e0f427019fb4363fe65023d.jpg" class="width-auto"><div>Wine Barrel</div><div>$120</div></div>
+    </div>
   </div>
   <!-- intro -->
-  <div class="container border-bottom">
+  <!-- <div class="container border-bottom">
     <div class="row">
       <div class="col-sm-12 col-md-4"> <img src="../../../../assets/images/27b25727867542241b089db0d3eb3c55.jpg" style=" height: auto;
         max-width: 100%;"></div>
@@ -98,15 +107,45 @@
         <div class="my-3">Are you getting married and want to get your message of love across in a unique way? Is it that special someone’s birthday and a simple birthday card just won’t cut it? Or do you want to add some wow factor to a Christmas party? Our giant letters can spell out any message and will certainly add dramatic effect, making your event one to be remembered.</div>
       </div>
     </div>
+  </div> -->
+
+  <div class="container p-0 my-2">
+    <div class="row">
+      <div class="col-6"><img src="../../../../assets/images/cebb995345f82a73cd0fea85a7bc899c.jpg" class=" d-block ml-auto " style="position: absolute;
+        clip: rect(0px,auto,500px,0px);"></div>
+      <div class="col-6 pt-5">
+        <br><br><br>
+        <div class="l2 mt-5">STYLING</div>
+        <div class="my-3">Want a Pinterest worthy event but just not sure where to start or how to bring all the elements together to create a picture-perfect setting?<br/><br/>Got It Covered love to create incredible events that inspire and excite!</div>
+        <button type="button" class="btn btn-outline-gold my-5">View our products</button>
+        <br><br><br>
+      </div>
+    </div>
   </div>
 
+  <div class="container p-0 my-2">
+    <div class="row">
+      <div class="col-6 pt-4">
+        <div class="l2 mt-5">CORPORATE EVENTS</div>
+        <div class="my-3">So you are planning a corporate event and need help with the styling and theming? Let us help you create the wow factor and give your guests an event to remember!<br/><br/>From the smallest detail to the grandest event, Got It Covered has set up and styled events in venues throughout the Nelson and Marlborough region since 2005 with an established reputation for excellence.</div>
+        <button type="button" class="btn btn-outline-gold my-5">View our products</button>
+        <br><br>
+      </div>
+      <div class="col-6"><img src="../../../../assets/images/5da0c82500e7be45dc17d023ea7e2c83.jpg " class=" d-block ml-auto " style="position: absolute;
+        clip: rect(0px,auto,500px,0px);"></div>
+    </div>
+  </div>
+  <!-- scrolling background -->
   <div class="bgat" #bgat >
     <div class="container my-5">
       <div class="row my-5"> Let's testing the background!</div>
+      <br/>
       <div class="row my-5"> Let's testing the background!</div>
+      <br/>
       <div class="row my-5"> Let's testing the background!</div>
     </div>
   </div>
+
   <!-- service -->
   <div class="container border-bottom py-5">
     <div class="row"> <div class="col-12"><h2 class="text-center">Personalised, Professional Service</h2></div></div>
