--- a/src/app/fcomponents/basic/footer/footer.component.html
+++ b/src/app/fcomponents/basic/footer/footer.component.html
@@ -3,38 +3,47 @@
     <div class="row" style="text-align:center">
       <div class="col-md-4">
         <br>
-        <div class="row">
-          <div class="col-1"></div>
-          <div class="col-3 ">
-            <i class=" icon fas fa-envelope"></i>
-          </div>
-          <div class="col-3 ">
-              <i class="icon fab fa-facebook-f"></i>
-          </div>
-          <div class="col-3 ">
-              <i class="icon fab fa-instagram"></i>
-          </div>
-          <div class="col-2"></div>
-        </div>
       </div>
 
       <div class="col-md-4" style="padding-top:10px;">
         <br>
-        <div class="s2gold">Call Us: 1300 001 802</div>
+        <div class="s2gold mb-3">Follow us on facebook...</div>
       </div>
 
-      <div class="col-md-4" >
-        <br>
-        <button class="btn btn-outline-gold" routerLink='/contactUs' routerLinkActive="active"  type="button" name="button"  >Contact Us</button>
+    </div>
+    <div class="row">
+      <div class="col-4" style="color: white;">
+        <ul>SITEMAP 
+          <li>Home</li>
+          <li>About us</li>
+          <li>Contact</li>
+        </ul> 
+       </div>
+      <div class="col-4" style="color: white;">
+        <ul>SERVICES
+          <li>Hire</li>
+          <li>Packages</li>
+          <li>Services</li>
+        </ul>
+      </div>
+      <div class="col-4" style="color: white;">
+        <ul>CONTACT US
+          <li>Email</li>
+          <li>Phone</li>
+          <li>Facebook</li>
+        </ul>
       </div>
     </div>
+    
   </div>
   <br>
 </div>
 <div class="footerbot">
   <div class="container">
     <br>
-    <!-- <p style="margin-bottom:0px;">The Big Letter Co. © 2017 All rights reserved |</p> -->
+    <div class="text-center">
+      Copyright.......All rights reserved.
+    </div>
     <br>
   </div>
 </div>
