--- a/src/app/fcomponents/pages/homepage/homepage.component.html
+++ b/src/app/fcomponents/pages/homepage/homepage.component.html
@@ -1,21 +1,21 @@
-<div class="container-fluid" (scroll)="scrollHandler($event)">
+<div class="container-fluid">
 
-<!-- top img -->
-<!-- <div class="row ">
-  <div class="col-12 back1">
-    <div class='container'>
-      <div class="row homeTopLogo1 text-center"> <div class="col-12">
-        <img src="../../../../assets/images/Asset1-4x-big.png"></div></div>
-      <div class="row homeTopLogo2 pb-5 text-center"><div class="col-12">
-          <h1 class="j1">Auckland Leading</h1>
-        </div> </div>
-      <div class="row text-center"><div class="col-12 mb-5" ><span class="j1">Letter & Event Hire Company</span> </div>
-    </div>
+  <!-- top img -->
+  <!-- <div class="row ">
+    <div class="col-12 back1">
+      <div class='container'>
+        <div class="row homeTopLogo1 text-center"> <div class="col-12">
+          <img src="../../../../assets/images/Asset1-4x-big.png"></div></div>
+        <div class="row homeTopLogo2 pb-5 text-center"><div class="col-12">
+            <h1 class="j1">Auckland Leading</h1>
+          </div> </div>
+        <div class="row text-center"><div class="col-12 mb-5" ><span class="j1">Letter & Event Hire Company</span> </div>
       </div>
-    </div>
-  </div> -->
+        </div>
+      </div>
+    </div> -->
   <div class="row">
-      <div class="col-12 p-0">
+    <div class="col-12 p-0">
       <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
         <ol class="carousel-indicators">
           <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
@@ -46,26 +46,34 @@
   </div>
 
   <!-- product pics -->
-  
-  <div style="background-image: url(https://www.thebigletterco.com.au/wp-content/uploads/2013/10/logo-watermark-02.png);background-size: cover; background-position: center center;width: auto; height: 100%; opacity: 1;">
-      <div class="container my-5 border-top pt-5"> 
-        <div class="m1 text-center my-3">
-          This is title
-       </div>
-       <div class="px-5 text-center"> 
-          From the smallest detail to the grandest event, Got It Covered can take care of all the details. With the largest hire range in Nelson and Marlborough and with 13+ years experience our professional team of event stylists and florists love helping create memorable events.
-       </div>
-       <div class="px-5 my-5 text-center">
-          Whether you are planning a wedding, corporate event, birthday, bridal shower, engagement party, baby shower, ball, anniversary or any kind of party, Got It Covered has an extensive range of hire items that cater to a large range of styles and events.
-       </div>
-       <div class="px-5 text-center">
-          You’re not boring, so why should your event decor be.
-       </div>
+
+  <div
+    style="background-image: url(https://www.thebigletterco.com.au/wp-content/uploads/2013/10/logo-watermark-02.png);background-size: cover; background-position: center center;width: auto; height: 100%; opacity: 1;">
+    <div class="container my-5 border-top pt-5">
+      <div class="m1 text-center my-3">
+        This is title
       </div>
-      <div class="row justify-content-md-center my-5"> <div class="col-12 text-center"><button type="button" class="btn btn-outline-gold">View our products</button></div>
+      <div class="px-5 text-center">
+        From the smallest detail to the grandest event, Got It Covered can take care of all the details. With the
+        largest hire range in Nelson and Marlborough and with 13+ years experience our professional team of event
+        stylists and florists love helping create memorable events.
       </div>
+      <div class="px-5 my-5 text-center">
+        Whether you are planning a wedding, corporate event, birthday, bridal shower, engagement party, baby shower,
+        ball, anniversary or any kind of party, Got It Covered has an extensive range of hire items that cater to a
+        large range of styles and events.
+      </div>
+      <div class="px-5 text-center">
+        You’re not boring, so why should your event decor be.
+      </div>
+    </div>
+    <div class="row justify-content-md-center my-5">
+      <div class="col-12 text-center">
+        <button type="button" class="btn btn-outline-gold">View our products</button>
+      </div>
+    </div>
   </div>
-<!-- Hire Products -->
+  <!-- Hire Products -->
   <!-- <div style="background-color: #f2f2f2;margin-left: -15px; margin-right: -15px;" >
     <div class="container my-5 py-2">
       <div class="row my-5">
@@ -90,10 +98,22 @@
   <div class="container p-0 my-5 hireCollection">
     <div class="text-center mb-5 m1">Hire Collection</div>
     <div class="row">
-      <div class="col-3"><img src="../../../../assets/images/productImg1.jpeg"><div>Oblong Trestle Tables</div><div>$120</div></div>
-      <div class="col-3"><img src="../../../../assets/images/productImg2.jpeg"><div>Round Tables</div><div>$120</div></div>
-      <div class="col-3"><img src="../../../../assets/images/productImg3.png"><div>Round Tables</div><div>$120</div></div>
-      <div class="col-3"><img src="../../../../assets/images/465b91cc5e0f427019fb4363fe65023d.jpg" class="width-auto"><div>Wine Barrel</div><div>$120</div></div>
+      <div class="col-3"><img src="../../../../assets/images/productImg1.jpeg">
+        <div>Oblong Trestle Tables</div>
+        <div>$120</div>
+      </div>
+      <div class="col-3"><img src="../../../../assets/images/productImg2.jpeg">
+        <div>Round Tables</div>
+        <div>$120</div>
+      </div>
+      <div class="col-3"><img src="../../../../assets/images/productImg3.png">
+        <div>Round Tables</div>
+        <div>$120</div>
+      </div>
+      <div class="col-3"><img src="../../../../assets/images/465b91cc5e0f427019fb4363fe65023d.jpg" class="width-auto">
+        <div>Wine Barrel</div>
+        <div>$120</div>
+      </div>
     </div>
   </div>
   <!-- intro -->
@@ -111,12 +131,16 @@
 
   <div class="container p-0 my-2">
     <div class="row">
-      <div class="col-6"><img src="../../../../assets/images/cebb995345f82a73cd0fea85a7bc899c.jpg" class=" d-block ml-auto " style="position: absolute;
+      <div class="col-6"><img src="../../../../assets/images/cebb995345f82a73cd0fea85a7bc899c.jpg"
+                              class=" d-block ml-auto " style="position: absolute;
         clip: rect(0px,auto,500px,0px);"></div>
       <div class="col-6 pt-5">
         <br><br><br>
         <div class="l2 mt-5">STYLING</div>
-        <div class="my-3">Want a Pinterest worthy event but just not sure where to start or how to bring all the elements together to create a picture-perfect setting?<br/><br/>Got It Covered love to create incredible events that inspire and excite!</div>
+        <div class="my-3">Want a Pinterest worthy event but just not sure where to start or how to bring all the
+          elements together to create a picture-perfect setting?<br/><br/>Got It Covered love to create incredible
+          events that inspire and excite!
+        </div>
         <button type="button" class="btn btn-outline-gold my-5">View our products</button>
         <br><br><br>
       </div>
@@ -127,16 +151,21 @@
     <div class="row">
       <div class="col-6 pt-4">
         <div class="l2 mt-5">CORPORATE EVENTS</div>
-        <div class="my-3">So you are planning a corporate event and need help with the styling and theming? Let us help you create the wow factor and give your guests an event to remember!<br/><br/>From the smallest detail to the grandest event, Got It Covered has set up and styled events in venues throughout the Nelson and Marlborough region since 2005 with an established reputation for excellence.</div>
+        <div class="my-3">So you are planning a corporate event and need help with the styling and theming? Let us help
+          you create the wow factor and give your guests an event to remember!<br/><br/>From the smallest detail to the
+          grandest event, Got It Covered has set up and styled events in venues throughout the Nelson and Marlborough
+          region since 2005 with an established reputation for excellence.
+        </div>
         <button type="button" class="btn btn-outline-gold my-5">View our products</button>
         <br><br>
       </div>
-      <div class="col-6"><img src="../../../../assets/images/5da0c82500e7be45dc17d023ea7e2c83.jpg " class=" d-block ml-auto " style="position: absolute;
+      <div class="col-6"><img src="../../../../assets/images/5da0c82500e7be45dc17d023ea7e2c83.jpg "
+                              class=" d-block ml-auto " style="position: absolute;
         clip: rect(0px,auto,500px,0px);"></div>
     </div>
   </div>
   <!-- scrolling background -->
-  <div class="bgat" #bgat >
+  <div class="bgat" #bgat>
     <div class="container my-5">
       <div class="row my-5"> Let's testing the background!</div>
       <br/>
@@ -148,29 +177,38 @@
 
   <!-- service -->
   <div class="container border-bottom py-5">
-    <div class="row"> <div class="col-12"><h2 class="text-center">Personalised, Professional Service</h2></div></div>
+    <div class="row">
+      <div class="col-12"><h2 class="text-center">Personalised, Professional Service</h2></div>
+    </div>
     <div class="row">
       <div class="col-sm-12 col-md-6">
         <ul class="s3">
-            <li>Large range of freestanding illuminated letters, numbers and words for hire.</li>
-            <li>Large vintage Hollywood lightbox personalised to your needs.</li>
-            <li>Quality custom made products.</li>
-            <li>All our products are safe and meet Australian safety standards.</li>
+          <li>Large range of freestanding illuminated letters, numbers and words for hire.</li>
+          <li>Large vintage Hollywood lightbox personalised to your needs.</li>
+          <li>Quality custom made products.</li>
+          <li>All our products are safe and meet Australian safety standards.</li>
         </ul>
       </div>
       <div class="col-sm-12 col-md-6">
-          <ul class="s3">
-              <li>We take pride in our service and guarantee 100% satisfaction.</li>
-              <li>We will work closely with you offering our advice when needed to ensure your event shines.</li>
-              <li>Great for corporate events, birthdays, Christmas parties, kids parties, weddings, engagements or photo-shoots.</li>
-          </ul>
+        <ul class="s3">
+          <li>We take pride in our service and guarantee 100% satisfaction.</li>
+          <li>We will work closely with you offering our advice when needed to ensure your event shines.</li>
+          <li>Great for corporate events, birthdays, Christmas parties, kids parties, weddings, engagements or
+            photo-shoots.
+          </li>
+        </ul>
       </div>
     </div>
   </div>
   <!-- contact -->
   <div class="container">
-    <div class="mt-5">Just imagine the feeling of dancing in the glow of the big lights shining from your letters of LOVE, hand in hand with the love of your life. Or be transported in time gathering with friends aside our large Hollywood lightbox, glass of champagne in hand. Sound amazing hey?</div>
-    <div class="my-4">Whatever the occasion, add some lights and glamour with our personalised illuminated letters. Call The Big Letter Co. for more information on 1300 001 802 or Email us: info@thebigletterco.com.au</div>
+    <div class="mt-5">Just imagine the feeling of dancing in the glow of the big lights shining from your letters of
+      LOVE, hand in hand with the love of your life. Or be transported in time gathering with friends aside our large
+      Hollywood lightbox, glass of champagne in hand. Sound amazing hey?
+    </div>
+    <div class="my-4">Whatever the occasion, add some lights and glamour with our personalised illuminated letters. Call
+      The Big Letter Co. for more information on 1300 001 802 or Email us: info@thebigletterco.com.au
+    </div>
   </div>
 </div>
 
