--- a/src/app/fcomponents/basic/footer/footer.component.html
+++ b/src/app/fcomponents/basic/footer/footer.component.html
@@ -1,47 +1,58 @@
 <div class="footertop">
-  <div class="container">
+  <div class="container p-0">
+    <!-- follow us -->
     <div class="row" style="text-align:center">
       <div class="col-md-4">
         <br>
       </div>
 
-      <div class="col-md-4" style="padding-top:10px;">
+      <div class="col-md-4 py-4">
         <br>
-        <div class="s2gold mb-3">Follow us on facebook...</div>
+        <div class="s2bold mb-3 text-white">Follow us on facebook...</div>
       </div>
-
     </div>
+
+      <!-- imgs -->
+
     <div class="row">
-      <div class="col-4" style="color: white;">
-        <ul>SITEMAP 
-          <li>Home</li>
-          <li>About us</li>
-          <li>Contact</li>
+      <div class="col-3"><img  class ="imgBlocks" src="../../../../assets/images/about-us.jpg" alt=""></div>
+      <div class="col-3"><img  class ="imgBlocks" src="../../../../assets/images/productImg3.png" alt=""></div>
+      <div class="col-3"><img  class ="imgBlocks" src="../../../../assets/images/productImg1.jpeg" alt=""></div>
+      <div class="col-3"><img  class ="imgBlocks" src="../../../../assets/images/productImg2.jpeg" alt=""></div>
+    </div>
+
+      <!-- lists -->
+    <div class="row mt-3">
+      <div class="col-4 s3">
+        <ul> <span class="s2bold text-white">SITEMAP</span> 
+          <li class="mt-2 pt-2 text-decoration-underline text-white-50">Home</li>
+          <li class="mt-2 text-decoration-underline text-white-50">About us</li>
+          <li class="mt-2 text-decoration-underline text-white-50">Contact</li>
+          <li class="text-white-50"><i class="fab fa-facebook-square pr-2 "></i><i class="fab fa-instagram pr-2"></i><i class="far fa-envelope pr-2"></i></li>
         </ul> 
        </div>
-      <div class="col-4" style="color: white;">
-        <ul>SERVICES
-          <li>Hire</li>
-          <li>Packages</li>
-          <li>Services</li>
+      <div class="col-4 s3">
+        <ul><span class="s2bold text-white">SERVICES</span>
+          <li class="mt-2 pt-2 text-decoration-underline text-white-50">Hire</li>
+          <li class="mt-2 text-decoration-underline text-white-50">Packages</li>
+          <li class="mt-2 text-decoration-underline text-white-50">Services</li>
         </ul>
       </div>
-      <div class="col-4" style="color: white;">
-        <ul>CONTACT US
-          <li>Email</li>
-          <li>Phone</li>
-          <li>Facebook</li>
+      <div class="col-4 s3">
+        <ul><span class="s2bold text-white">CONTACT US</span>
+          <li class="mt-2 pt-2 text-decoration-underline text-white-50">Email</li>
+          <li class="mt-2 text-decoration-underline text-white-50">Phone</li>
+          <li class="mt-2 text-decoration-underline text-white-50">Facebook</li>
         </ul>
       </div>
     </div>
     
   </div>
-  <br>
 </div>
 <div class="footerbot">
   <div class="container">
     <br>
-    <div class="text-center">
+    <div class="s4 text-center text-white">
       Copyright.......All rights reserved.
     </div>
     <br>
