--- a/src/styles.css
+++ b/src/styles.css
@@ -73,9 +73,9 @@
     color:#4b4b4b;
     font-weight: bold;
 }
-s4{
+.s4{
     font-size:13px;
-    color:#0099FF;
+    color:#424242;
 }
 .error-feedback{
     color:#b30000;
