--- a/src/app/fcomponents/basic/footer/footer.component.css
+++ b/src/app/fcomponents/basic/footer/footer.component.css
@@ -39,3 +39,10 @@ i
     background-color: #111111;
     color:#555555;
 }
+ul{
+    list-style-type: none;
+}
+.imgBlocks{
+    width:100%;
+    height: 161.20px;
+}
