--- a/src/app/fcomponents/basic/footer/footer.component.html
+++ b/src/app/fcomponents/basic/footer/footer.component.html
@@ -8,7 +8,11 @@
 
       <div class="col-md-4 py-4">
         <br>
-        <div class="s2bold mb-3 text-white">Follow us on facebook...</div>
+        <div class="mb-3">
+          <i class="fab fa-facebook-square rounded-lg p-3 rounded"></i>
+          <i class="fab fa-instagram rounded-lg p-3 rounded"></i>
+          <i class="far fa-envelope rounded-lg p-3 rounded"></i>
+        </div>
       </div>
     </div>
 
@@ -28,7 +32,11 @@
           <li class="mt-2 pt-2 text-decoration-underline text-white-50">Home</li>
           <li class="mt-2 text-decoration-underline text-white-50">About us</li>
           <li class="mt-2 text-decoration-underline text-white-50">Contact</li>
-          <li class="text-white-50"><i class="fab fa-facebook-square pr-2 "></i><i class="fab fa-instagram pr-2"></i><i class="far fa-envelope pr-2"></i></li>
+          <!-- <li class="text-white-50">
+            <i class="fab fa-facebook-square rounded-lg p-3 rounded"></i>
+            <i class="fab fa-instagram rounded-lg p-3 rounded"></i>
+            <i class="far fa-envelope rounded-lg p-3 rounded"></i>
+          </li> -->
         </ul> 
        </div>
       <div class="col-4 s3">
