--- a/src/app/fcomponents/pages/contactUs/contactUs.component.html
+++ b/src/app/fcomponents/pages/contactUs/contactUs.component.html
@@ -113,3 +113,25 @@
 
     </div>
   </div>
+
+  <!-- <div class="container">
+    <span class="l0">This is l0</span><br/>
+    <span class="l1">This is l1</span><br/>
+    <span class="l2">This is l2</span><br/>
+    <span class="m1">This is m1</span><br/>
+    <span class="m2">This is m2</span><br/>
+    <span class="s1">This is s1</span><br/>
+    <span class="s1gold">This is s1gold</span><br/>
+    <span class="s1bold">This is s1bold</span><br/>
+    <span class="s1goldbold">This is s1goldbold</span><br/>
+
+    <span class="s2">This is s2</span><br/>
+    <span class="s2bold">This is s2bold</span><br/>
+    <span class="s2gold">This is s2gold</span><br/>
+    <span class="s2goldbold">This is s2goldbold</span><br/>
+
+    <span class="s3">This is s3</span><br/>
+    <span class="s3bold">This is s3bold</span><br/>
+    <span class="s3gold">This is s3gold</span><br/>
+
+  </div> -->
