--- a/src/app/fcomponents/products/product/product.component.html
+++ b/src/app/fcomponents/products/product/product.component.html
@@ -1,9 +1,10 @@
 <div class="container-fluid py-3 mb-5">&nbsp;</div>
 <div class="container-fluid px-5" #container>
+  <div class="row"><div class="col-4 s2goldbold">productType > product Name</div></div>
   <div class="row my-5">
   <div class="col-12 col-md-6 col-lg-5">
     <div (mouseenter)="mouseEnter()" (mouseleave)="mouseLeave()" (mousemove)="mouseMove($event)">
-        <img src="{{defaultImgUrl}}" class="d-block w-100" id="small" #small style="zoom:70%">
+        <img src="{{defaultImgUrl}}" class="d-block w-100" id="small" #small style="height:500px;">
         <b id="shadow" #shadow></b>
     </div>
     <br>
