--- a/src/app/fcomponents/basic/footer/footer.component.html
+++ b/src/app/fcomponents/basic/footer/footer.component.html
@@ -27,7 +27,7 @@
 
       <!-- lists -->
     <div class="row mt-3">
-      <div class="col-4 s3">
+      <div class="col-4 s3bold">
         <ul> <span class="s2bold text-white">SITEMAP</span> 
           <li class="mt-2 pt-2 text-decoration-underline text-white-50">Home</li>
           <li class="mt-2 text-decoration-underline text-white-50">About us</li>
@@ -39,14 +39,14 @@
           </li> -->
         </ul> 
        </div>
-      <div class="col-4 s3">
+      <div class="col-4 s3bold">
         <ul><span class="s2bold text-white">SERVICES</span>
           <li class="mt-2 pt-2 text-decoration-underline text-white-50">Hire</li>
           <li class="mt-2 text-decoration-underline text-white-50">Packages</li>
           <li class="mt-2 text-decoration-underline text-white-50">Services</li>
         </ul>
       </div>
-      <div class="col-4 s3">
+      <div class="col-4 s3bold">
         <ul><span class="s2bold text-white">CONTACT US</span>
           <li class="mt-2 pt-2 text-decoration-underline text-white-50">Email</li>
           <li class="mt-2 text-decoration-underline text-white-50">Phone</li>
@@ -60,7 +60,7 @@
 <div class="footerbot">
   <div class="container">
     <br>
-    <div class="s4 text-center text-white">
+    <div class="s3gold text-center ">
       Copyright.......All rights reserved.
     </div>
     <br>
