--- a/src/app/fcomponents/basic/navbar/navbar.component.html
+++ b/src/app/fcomponents/basic/navbar/navbar.component.html
@@ -41,7 +41,7 @@
   </div>
 </nav> -->
 
-<nav class="navbar navbar-expand-md navbar-light bg-light border-bottom p-0 p-md-1">
+<nav class="navbar navbar-expand-md navbar-light bg-light border-bottom p-0">
     <div class="navbar-collapse collapse w-100 order-1 order-md-0 dual-collapse2">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item pl-md-5">
