--- a/src/app/fcomponents/pages/homepage/homepage.component.html
+++ b/src/app/fcomponents/pages/homepage/homepage.component.html
@@ -96,7 +96,7 @@
     </div>
   </div> -->
   <div class="container p-0 my-5 hireCollection">
-    <div class="text-center mb-5 m1">Hire Collection</div>
+    <div class="text-center mb-5 l2 lspace-3">Hire Collection</div>
     <div class="row">
       <div class="col-3"><img src="../../../../assets/images/productImg1.jpeg">
         <div>Oblong Trestle Tables</div>
@@ -136,12 +136,12 @@
         clip: rect(0px,auto,500px,0px);"></div>
       <div class="col-6 pt-5">
         <br><br><br>
-        <div class="l2 mt-5">STYLING</div>
+        <div class="l2 mt-5 lspace-5">STYLING</div>
         <div class="my-3">Want a Pinterest worthy event but just not sure where to start or how to bring all the
           elements together to create a picture-perfect setting?<br/><br/>Got It Covered love to create incredible
           events that inspire and excite!
         </div>
-        <button type="button" class="btn btn-outline-gold my-5">View our products</button>
+        <button type="button" class="btn btn-outline-gold my-5 lspace-3">View our products</button>
         <br><br><br>
       </div>
     </div>
@@ -150,13 +150,13 @@
   <div class="container p-0 my-2">
     <div class="row">
       <div class="col-6 pt-4">
-        <div class="l2 mt-5">CORPORATE EVENTS</div>
+        <div class="l2 mt-5 lspace-5">CORPORATE EVENTS</div>
         <div class="my-3">So you are planning a corporate event and need help with the styling and theming? Let us help
           you create the wow factor and give your guests an event to remember!<br/><br/>From the smallest detail to the
           grandest event, Got It Covered has set up and styled events in venues throughout the Nelson and Marlborough
           region since 2005 with an established reputation for excellence.
         </div>
-        <button type="button" class="btn btn-outline-gold my-5">View our products</button>
+        <button type="button" class="btn btn-outline-gold my-5 lspace-3">View our products</button>
         <br><br>
       </div>
       <div class="col-6"><img src="../../../../assets/images/5da0c82500e7be45dc17d023ea7e2c83.jpg "
@@ -176,7 +176,7 @@
   </div>
 
   <!-- service -->
-  <div class="container border-bottom py-5">
+  <!-- <div class="container border-bottom py-5">
     <div class="row">
       <div class="col-12"><h2 class="text-center">Personalised, Professional Service</h2></div>
     </div>
@@ -199,7 +199,7 @@
         </ul>
       </div>
     </div>
-  </div>
+  </div> -->
   <!-- contact -->
   <div class="container">
     <div class="mt-5">Just imagine the feeling of dancing in the glow of the big lights shining from your letters of
