--- a/src/app/fcomponents/basic/footer/footer.component.html
+++ b/src/app/fcomponents/basic/footer/footer.component.html
@@ -1,11 +1,11 @@
-<div class="footertop">
+<div class="bg-dark">
   <div class="container p-0">
     <!-- follow us -->
     <div class="row" style="text-align:center">
       <div class="col-md-4">
         <br>
       </div>
-
+      <!-- facebook/ins/message -->
       <div class="col-md-4 py-4">
         <br>
         <div class="mb-3">
@@ -17,17 +17,16 @@
     </div>
 
       <!-- imgs -->
-
     <div class="row">
-      <div class="col-3"><img  class ="imgBlocks" src="../../../../assets/images/about-us.jpg" alt=""></div>
-      <div class="col-3"><img  class ="imgBlocks" src="../../../../assets/images/productImg3.png" alt=""></div>
-      <div class="col-3"><img  class ="imgBlocks" src="../../../../assets/images/productImg1.jpeg" alt=""></div>
-      <div class="col-3"><img  class ="imgBlocks" src="../../../../assets/images/productImg2.jpeg" alt=""></div>
+      <div class="col-6 col-md-3"><img  class ="imgBlocks" src="../../../../assets/images/about-us.jpg" alt=""></div>
+      <div class="col-6 col-md-3"><img  class ="imgBlocks" src="../../../../assets/images/productImg3.png" alt=""></div>
+      <div class="col-6 col-md-3"><img  class ="imgBlocks" src="../../../../assets/images/productImg1.jpeg" alt=""></div>
+      <div class="col-6 col-md-3"><img  class ="imgBlocks" src="../../../../assets/images/productImg2.jpeg" alt=""></div>
     </div>
 
       <!-- lists -->
     <div class="row mt-3">
-      <div class="col-4 s3bold">
+      <div class="col-3 s3bold">
         <ul> <span class="s2bold text-white">SITEMAP</span> 
           <li class="mt-2 pt-2 text-decoration-underline text-white-50">Home</li>
           <li class="mt-2 text-decoration-underline text-white-50">About us</li>
@@ -39,14 +38,14 @@
           </li> -->
         </ul> 
        </div>
-      <div class="col-4 s3bold">
+      <div class="col-3 s3bold">
         <ul><span class="s2bold text-white">SERVICES</span>
           <li class="mt-2 pt-2 text-decoration-underline text-white-50">Hire</li>
           <li class="mt-2 text-decoration-underline text-white-50">Packages</li>
           <li class="mt-2 text-decoration-underline text-white-50">Services</li>
         </ul>
       </div>
-      <div class="col-4 s3bold">
+      <div class="col-3 s3bold">
         <ul><span class="s2bold text-white">CONTACT US</span>
           <li class="mt-2 pt-2 text-decoration-underline text-white-50">Email</li>
           <li class="mt-2 text-decoration-underline text-white-50">Phone</li>
@@ -54,15 +53,10 @@
         </ul>
       </div>
     </div>
-    
-  </div>
-</div>
-<div class="footerbot">
-  <div class="container">
-    <br>
-    <div class="s3gold text-center ">
-      Copyright.......All rights reserved.
+    <!-- copyright -->
+    <div class="row py-4">
+      <div class="col-12"><div class="s3gold text-center ">Copyright.......All rights reserved.</div></div>
     </div>
-    <br>
+    
   </div>
 </div>
