--- a/src/app/fcomponents/shopping_cart/shopping_cart.component.html
+++ b/src/app/fcomponents/shopping_cart/shopping_cart.component.html
@@ -1,10 +1,11 @@
 <div class="container pt-2">
+  <div class="row py-5"> <div class="col-12 s2goldbold">>Shopping cart</div></div>
   <div class="row py-1">
       <div class="col-5 s2bold"> Product Detail</div>
       <div class="col-2 s2bold ">Unit price</div>
-      <div class="col-1 s2bold">Amount</div>
+      <div class="col-1 s2bold">Amount</div>  
       <div class="col-1 s2bold">Totally</div>
-      <div class="col-3 s2bold">Action</div>
+      <div class="col-3 s2bold text-center">Action</div>
   </div>
   <div class="row mt-3">
       <div class="col-2"> <img src="../../../assets/images/productImg1.jpeg"></div>
@@ -12,7 +13,7 @@
       <div class="col-2 ">$150</div>
       <div class="col-1 ">3</div>
       <div class="col-1 bg-gray">$450</div>
-      <div class="col-3">
+      <div class="col-3 text-center">
           <div>Delete</div>
           <div>View Detail</div>
       </div>  
@@ -23,7 +24,7 @@
       <div class="col-2">$120</div>
       <div class="col-1">3</div>
       <div class="col-1 bg-gray">$360</div>
-      <div class="col-3">
+      <div class="col-3 text-center">
         <div>Delete</div>
         <div>View Detail</div>
       </div>
@@ -34,7 +35,7 @@
         <div class="col-2">$140</div>
         <div class="col-1">3</div>
         <div class="col-1 bg-gray">$420</div>
-        <div class="col-3">
+        <div class="col-3 text-center">
           <div>Delete</div>
           <div>View Detail</div>
         </div>
@@ -42,7 +43,7 @@
 </div>
 
 <div class="container my-5">
-  <div class="row justify-content-end border py-3">
+  <div class="row justify-content-end py-3">
       <div class="col-6 py-2"><a class='s2gold' [routerLink]="['/']"><i class="fas fa-arrow-left"></i>&nbsp; Continue Shopping</a> </div>
       <div class="col-3 py-2">Total Price: <span class="s2bold">$1230</span></div>
       <div class="col-3"><button class="btn btn-outline-gold" routerLink = '/userInfo'>Submit cart</button></div>
