--- a/src/app/fcomponents/pages/faq/faq.component.html
+++ b/src/app/fcomponents/pages/faq/faq.component.html
@@ -6,11 +6,9 @@
 </header> -->
 
 <div class="container-fluid faqImg">
-  <div class="container">
-    <div class="row my-5"> &nbsp;</div>
-      <div class="row my-5"><div class="col-12  text-center j1">Frequently Asked Questions</div></div>
-      <div class="row my-5"> &nbsp;</div>
-  </div>
+    <div class="row py-3"> &nbsp;</div>
+      <div class="row py-4"><div class="col-12 j1 text-center">Frequently Asked Questions</div></div>
+      <div class="row py-3"> &nbsp;</div>
 </div>
 <!-- accordion bit -->
 <div class="container">
