--- a/src/app/fcomponents/products/productList/productList.component.html
+++ b/src/app/fcomponents/products/productList/productList.component.html
@@ -1,27 +1,28 @@
-<div class="container-fluid productsBackImg" >
-  <div class="row py-5"> &nbsp;</div>
-  <div class="row py-5">
-    <div class="col-12 text-center j1 my-5" *ngIf="typeName == 'service'">Our Services</div>
-    <div class="col-12 text-center j1 my-5" *ngIf="typeName == 'hire'">Our Hires</div>
-    <div class="col-12 text-center j1 my-5" *ngIf="typeName == 'package'">Our Packages</div>
-  </div>
-  <div class="row my-5"> &nbsp;</div>
-</div>
-
 <div class="container">
-  <div class="row">
-      <div class="col-12 text-center">
-          Bringing your party vision to life can be exhausting, so we aim to be there with you as much as you need. If you have a clear idea already, that’s great. If not, we can help bring the wow factor to your event like never before. Contact us to talk over details and receive a quote.</div>
-      <div class="col-12 mb-2 l1 text-center" *ngIf="typeName == 'hire'">  Our Hires</div>
-      <div class="col-12 mb-2 l1 text-center" *ngIf="typeName == 'service'">  Our Services</div>
-      <div class="col-12 mb-2 l1 text-center" *ngIf="typeName == 'package'">  Our Packages</div>
+    <div class="row py-3">
+        <div class="col-12 mb-2 l1 text-center" *ngIf="typeName == 'hire'">  Our Hires</div>
+        <div class="col-12 mb-2 l1 text-center" *ngIf="typeName == 'service'">  Our Services</div>
+        <div class="col-12 mb-2 l1 text-center" *ngIf="typeName == 'package'">  Our Packages</div>
+    </div>
+    <!-- categories and search -->
+    <div class="row justify-content-center">
+        <div class="s1 border-bottom" style="padding:6px 0;">Categories:</div>
+        <div class="col-4 p-0 border-bottom">
+          <div class="dropdown">
+            <button class="btn btn-secondary dropdown-toggle w-100 text-left s1" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              {{selectedCate}}</button>
+            <div class="dropdown-menu w-100 text-left s1" aria-labelledby="dropdownMenuButton">
+              <a class="dropdown-item" (click)="changeCate($event)" *ngFor="let cate of allCategories">{{cate}}</a>
+            </div>
+          </div>
+        </div>
+    </div>
 
-      <div class="col-12 text-center">All prices are in AUD. Damage waiver, delivery & pick up fees are additional</div>
-  </div>
 
   <div class="row"><div class="col-12 col-md-6 s2bold" *ngIf="!allProducts || allProducts.length ==0">Sorry, We can not find any products at this moment.</div></div>
   <div class="row py-3">
-    <div class='col-12 col-md-6 py-5 border-bottom' *ngFor="let product of allProducts; index as i">
+    
+    <div class='col-12 col-md-4 pt-4 pb-2' *ngFor="let product of allProducts; index as i">
 
         <div id="carouselExampleFade{{i}}" class="carousel slide carousel-fade" data-ride="carousel" data-interval="false">
             <a [routerLink] = "['/product/'+product.ProdId]">
@@ -53,10 +54,8 @@
               <span class="sr-only">Next</span>
             </a>
           </div>
-      <div class="my-3"><a  class="l2" [routerLink] = "['/product/'+product.ProdId]">{{product.Title}} </a></div>
-      <div class="s1">${{product.Price}}</div>
-      <div class="s2 my-3">{{product.CategroyName}},{{product.ProdTypeName}}</div>
-      <div class="s2">{{product.Description}}</div>
+      <div><a  class="m1" [routerLink] = "['/product/'+product.ProdId]">{{product.Title}} </a></div>
+      <div class="row"><div class="s2gold col-4">$ {{product.Price}}</div><div class="s2 col-6">Hired: 12</div></div>
     </div>
 
   </div>
