--- a/src/app/fcomponents/basic/footer/footer.component.html
+++ b/src/app/fcomponents/basic/footer/footer.component.html
@@ -25,33 +25,42 @@
     </div>
 
       <!-- lists -->
-    <div class="row mt-3 text-center">
-      <div class="col-4 s3bold">
-        <ul> <span class="s2bold text-white">Lux Dream Event Hire</span> 
+    <div class="row mt-3 contactUs">
+      <div class="col-4 s3bold pl-5">
+        <ul class="ml-5"> <span class="s2bold text-white">Lux Dream Event Hire</span> 
           <li class="mt-2 pt-2 text-decoration-underline text-white-50"><a [routerLink]="['/aboutUs']">About us</a></li>
           <li class="mt-2 text-decoration-underline text-white-50"> <a [routerLink]="[ '/contactUs']">Contact</a> </li>
           <li class="mt-2 text-decoration-underline text-white-50"><a [routerLink]="[ '/faq']">FAQ</a></li>
         </ul> 
        </div>
-      <div class="col-4 s3bold">
-        <ul><span class="s2bold text-white">Our Services</span>
+      <div class="col-4 s3bold pl-5">
+        <ul class="ml-5"><span class="s2bold text-white">Our Services</span>
           <li class="mt-2 pt-2 text-decoration-underline text-white-50"><a [routerLink]="[ '/hire']">Hire</a></li>
           <li class="mt-2 text-decoration-underline text-white-50"><a [routerLink]="[ '/services']">Event services</a></li>
           <li class="mt-2 text-decoration-underline text-white-50"><a [routerLink]="[ '/packages']">Event packages</a></li>
         </ul>
       </div>
-      <div class="col-4 s3bold">
-        <ul><span class="s2bold text-white">Contact us</span>
-          <li class="mt-2 pt-2 text-decoration-underline text-white-50">Phone</li>
-          <li class="mt-2 text-decoration-underline text-white-50">Email</li>
-          <li class="mt-2 text-decoration-underline text-white-50">Address</li>
-          <li class="mt-2 text-decoration-underline text-white-50">WeChat</li>
+      <div class="col-4 s3bold pl-5">
+        <ul class="ml-5"><span class="s2bold text-white">Contact us</span>
+          <li class="mt-2 pt-2 text-decoration-underline text-white-50"><div class="row"><div class="col-4"><i class="fas fa-phone-volume mr-3"></i></div><div class="col-8">112233456</div></div>
+          </li>
+
+          <li class="mt-2 text-decoration-underline text-white-50">
+              <div class="row"><div class="col-4"><i class="far fa-envelope mr-3"></i></div><div class="col-8">qwer@qwer.com</div></div>
+           </li>
+
+          <li class="mt-2 text-decoration-underline text-white-50"><div class="row"><div class="col-4"><i class="fas fa-map-marker-alt mr-3"></i></div><div class="col-8">25 Stock Street</div></div>
+            </li>
+
+          <li class="mt-2 text-decoration-underline text-white-50"><div class="row"><div class="col-4"><i class="fab fa-weixin mr-3"></i></div><div class="col-8">wechatId</div></div>
+          </li>
+
         </ul>
       </div>
     </div>
     <!-- copyright -->
     <div class="row py-4">
-      <div class="col-12"><div class="s3gold text-center ">Copyright.......All rights reserved.</div></div>
+      <div class="col-12"><div class="s3gold text-center ">&copy; Lux Dream Event Hire 2019</div></div>
     </div>
     
   </div>
